--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-31  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation by Ivan Noris.
+
 2004-05-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* tg.po: Added Tajik file
