--- a/po/sk.po
+++ b/po/sk.po
@@ -1,121 +1,110 @@
 # translation of yelp.HEAD.po to Slovak
 # translation of sk.po to Slovak
 # Slovak translation of sk.po
-# translation of @PACKAGE.po to @LANGUAGE
+# translation of @yelp.HEAD.po to @LANGUAGE
 # yelp Slovak translation.
 # Copyright (C) 2001,2002,2003 Free Software Foundation, Inc.
 # Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>, 2001,2002,2003.
 # Stanislav Višňovský <visnovsky@nenya.ms.mff.cuni.cz>, 2002.
 # Stanislav Visnovsky <visnovsky@kde.org>, 2003.
-#
+# Ivan Noris <vix@vazka.sk>, 2004
+# 
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2003-08-22 08:05+0200\n"
-"Last-Translator: Stanislav Visnovsky <visnovsky@kde.org>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-05-28 20:35+0200\n"
+"PO-Revision-Date: 2004-05-28 22:30+0200\n"
+"Last-Translator: Ivan Noris <vix@vazka.sk>\n"
 "Language-Team: Slovak <sk-i18n@linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.2beta3\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Aplikácie"
+msgstr "Aplety"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Aplikácie"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Prostredie"
+msgstr "Pracovná plocha"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Vývoj"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Vývoj"
+msgstr "Vývojové prostredia"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Vývoj"
+msgstr "Vývojové nástroje"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Upraviť"
+msgstr "Editory"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Aplikácie"
+msgstr "Vzdelávacie aplikácie"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Hry a zábava"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Všeobecné"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Obsah Pomocníka"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Aplikácie"
+msgstr "Internetové aplikácie"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Podprogramy jadra"
+msgstr "Jadrá"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Aplikácie"
+msgstr "Multimediálne aplikácie"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Kancelárske aplikácie"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Aplikácie"
+msgstr "Vedecké aplikácie"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Bezpečnosť"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Systémové volania"
+msgstr "Systém"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Pomôcky "
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Aplikácie"
+msgstr "Aplikácie X-Window"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -123,15 +112,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Rozlišovať veľké _a malé písmená"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Nájsť"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Nájsť: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -143,7 +132,7 @@ msgstr "_Predchádzajúci"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Preskočiť na začiatok"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -153,52 +142,47 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Vytváracie rozhranie Yelp"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Nebol nájdený atribút href v help:document"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Nedostatok pamäti"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Úvodná strana"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:643 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "Obsah Pomocníka"
+msgstr "Obsah"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
+#: src/yelp-db-pager.c:661 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Neznámy"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Dokument '%s' neexistuje"
+msgstr "Vybraný dokument sa nepodarilo otvoriť"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Dokument '%s' neexistuje"
+msgstr "Vybraná stránka nebola nájdená v tomto dokumente."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Dokument '%s' neexistuje"
+msgstr "Obsah nemožno čítať."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Dokumenty SGML Docbook už nie sú podporované."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Dokument '%s' neexistuje"
+msgstr "Vybraný súbor sa nepodarilo prečítať."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -275,28 +259,27 @@ msgid "System Administration"
 msgstr "Systémová administrácia"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Dokumenty"
+msgstr "URI dokumentu"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI spracovaného dokumentu"
 
-#: src/yelp-toc-pager.c:266
+#: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Počet páuz je záporné číslo."
 
-#: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#: src/yelp-toc-pager.c:487
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Nepodarilo sa aktivovať Yelp: '%s'"
+msgstr "Nepodarilo sa načítať OMF súbor '%s'."
 
-#: src/yelp-toc-pager.c:883
+#: src/yelp-toc-pager.c:884
 msgid "Categories"
 msgstr "Kategórie"
 
-#: src/yelp-toc-pager.c:897
+#: src/yelp-toc-pager.c:898
 msgid "Documents"
 msgstr "Dokumenty"
 
@@ -317,19 +300,16 @@ msgid "/_Edit"
 msgstr "/_Upraviť"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Upraviť/_Nájsť v stránke..."
+msgstr "/Upraviť/_Nájsť..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Upraviť/Hľadať ďalej"
+msgstr "/Upraviť/Nájsť ďa_lší"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Upraviť/Hľadať ďalej"
+msgstr "/Upraviť/Nájsť _predchádzajúci"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -348,24 +328,20 @@ msgid "/Go/_Home"
 msgstr "/Prejsť/_Domov"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Prejsť"
+msgstr "/Prejsť"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Predchádzajúci"
+msgstr "/Prejsť/_Predchádzajúca stránka"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Prejsť/_Index"
+msgstr "/Prejsť/_Nasledujúca stránka"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Obsah Pomocníka"
+msgstr "/Prejsť/_Obsah"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -413,73 +389,73 @@ msgstr "Načítavam..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1300
+#: src/yelp-window.c:1304
 msgid "translator_credits"
 msgstr "Stanislav Višňovský (visnovsky@nenya.ms.mff.cuni.cz)"
 
-#: src/yelp-window.c:1306
+#: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
 msgstr "Pomocník pre GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "O tomto článku"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "O tejto bibliografii"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "O tejto knihe"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "O tejto kapitole"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "O tejto položke"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "O tomto slovníku"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "O tomto indexe"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "O tejto časti"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "O tomto predslove"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "O tomto odkaze"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "O tejto kapitole"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
@@ -492,93 +468,91 @@ msgstr "Aplikácie"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Príloha"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Článok"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Publikum"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Autori"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografia"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Kniha"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Pozor"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Kapitola"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Spolupracovník"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Spolupracovníci"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Tiráž"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Copyright"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Copyrights"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Dátum"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Kapitola"
+msgstr "Venovanie"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Upraviť"
+msgstr "Redaktor"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "E-mail"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Príklad"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Obrázok"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Slovník"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Dôležité"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -586,63 +560,63 @@ msgstr "Index"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Právne oznámenie"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Úroveň"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Adresáti správy"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Úroveň správy"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Pôvod správy"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Poznámka"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Pôvod"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Iný prispievateľ"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Iní prispievatelia"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Časť"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Predslov"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Vydavateľ"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Vydavatelia"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Odkaz"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Položka odkazu"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
@@ -650,45 +624,43 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Informácie o vydaní"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "História revízií"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Pozri"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Pozri aj"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Index"
+msgstr ""
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Tabuľka"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Obsah Pomocníka"
+msgstr "Obsah"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Tip"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Nadpis"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Varovanie"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -698,54 +670,3 @@ msgstr "Zobraziť Pomocníka pre GNOME"
 msgid "Help"
 msgstr "Pomocník"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Dokument '%s' neexistuje"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Nájsť text v dokumente:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Automaticky na _konci zalomiť"
-
-#~ msgid "Find text..."
-#~ msgstr "Nájsť text..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "_Celé slová"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Rozlišovať veľkosť písmen"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Hľadať:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Prostredie"
-
-#~ msgid "Additional documents"
-#~ msgstr "Ďalšie dokumenty"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Manuálové stránky"
-
-#~ msgid "Info Pages"
-#~ msgstr "Stránky Info"
-
-#~ msgid "Manual pages"
-#~ msgstr "Manuálové stránky"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME je"
-
-#~ msgid "Free Software"
-#~ msgstr "Free Software"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Načítavam..."
-
-#~ msgid "Search in the index"
-#~ msgstr "Nájsť v indexe"
