--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-01  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-io-channel.c:
+	- Moved #include <stdio.h> above the other #includes
+
 2004-05-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added Tajik (tg) to ALL_LINGUAS
