- Calling scrollkeeper-get-content-list, because nothing else will be
* src/yelp-toc-pager.c:
- Calling scrollkeeper-get-content-list, because nothing else will be right

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-03  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Calling scrollkeeper-get-content-list, because nothing else will be right
+
 2004-06-01  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
