--- a/po/vi.po
+++ b/po/vi.po
@@ -1,114 +1,102 @@
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
-# pclouds <pclouds@fptnet.com>, 2002.
+# pclouds <pclouds@vnlinux.org>, 2002-2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.6.99\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-04-20 17:58-0500\n"
-"PO-Revision-Date: 2003-01-10 21:58+0700\n"
-"Last-Translator: pclouds <pclouds@gmx.net>\n"
+"PO-Revision-Date: 2004-06-25 21:47+0700\n"
+"Last-Translator: pclouds <pclouds@vnlinux.org>\n"
 "Language-Team: GnomeVI <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Ứng dụng"
+msgstr "Applet"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Ứng dụng"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Desktop"
+msgstr "Desktop"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Phát triển"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Phát triển"
+msgstr "Môi trường Phát triển"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Phát triển"
+msgstr "Công cụ Phát triển"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Sửa"
+msgstr "Chủ bút"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Ứng dụng"
+msgstr "Ứng dụng Giáo dục"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Trò chơi và Giải trí"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Chung"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Nội dung trợ giúp"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Ứng dụng"
+msgstr "Ứng dụng Internet"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Các hàm kernel"
+msgstr "Kernel"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Ứng dụng"
+msgstr "Ứng dụng Đa phương tiện"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Ứng dụng Văn phòng và Productivity"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Ứng dụng"
+msgstr "Ứng dụng Khoa học"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "An ninh - Bảo mật"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Lệnh gọi hệ thống"
+msgstr "Hệ thống"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Tiện ích"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Ứng dụng"
+msgstr "Ứng dụng X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -116,15 +104,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "_Phân biệt hoa/thường"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Tìm"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Tìm: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -136,7 +124,7 @@ msgstr "T_rước"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Cuộn"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -148,54 +136,49 @@ msgstr "Yelp Factory"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Không tìm thấy thuộc tính href trong yelp:document"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Hết bộ nhớ"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Trang tiêu đề"
 
 #: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "Nội dung trợ giúp"
+msgstr "Nội dung"
 
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Không rõ"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Tài liệu '%s' không tồn tại"
+msgstr "Không thể mở tài liệu được chọn"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Tài liệu '%s' không tồn tại"
+msgstr "Không tìm thấy tài liệu được chọn."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Tài liệu '%s' không tồn tại"
+msgstr "Không thể đọc mục lục."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Tài liệu DocBook SGML không còn được hỗ trợ nữa."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Tài liệu '%s' không tồn tại"
+msgstr "Không thể đọc tập tin được chọn."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "Định nghĩa thư mục cache được dùng"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -268,22 +251,21 @@ msgid "System Administration"
 msgstr "Quản trị hệ thống"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Tài liệu"
+msgstr "URI Tài liệu"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI của tài liệu cần xử lý"
 
 #: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Pause count âm."
 
 #: src/yelp-toc-pager.c:487
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Không thể kích hoạt Yelp: '%s'"
+msgstr "Không thể nạp tập tin OMF '%s'."
 
 #: src/yelp-toc-pager.c:884
 msgid "Categories"
@@ -299,30 +281,27 @@ msgstr "/_Tập tin"
 
 #: src/yelp-window.c:250
 msgid "/File/_New window"
-msgstr "/Tập tin/_Tạo cửa sổ mới"
+msgstr "/Tập tin/_Cửa sổ mới"
 
 #: src/yelp-window.c:253
 msgid "/File/_Close window"
-msgstr "/Tập tin/Đó_ng cửa sổ"
+msgstr "/Tập tin/Đón_g cửa sổ"
 
 #: src/yelp-window.c:257
 msgid "/_Edit"
 msgstr "/_Sửa"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Sửa/_Tìm trong trang..."
+msgstr "/Sửa/_Tìm..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Sửa/_Tìm nữa"
+msgstr "/Sửa/Tìm _tiếp"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Sửa/_Tìm nữa"
+msgstr "/Sửa/Tìm _lại"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -341,28 +320,24 @@ msgid "/Go/_Home"
 msgstr "/Đi/Về n_hà"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/Đ_i"
+msgstr "/Đi/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "T_rước"
+msgstr "/Đi/Trang T_rước"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Đi/_Mục lục"
+msgstr "/Đi/Trang _kế"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Nội dung trợ giúp"
+msgstr "/Đi/Nội dung"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
-msgstr "/_Trợ giúp"
+msgstr "/Trợ _giúp"
 
 #: src/yelp-window.c:290
 msgid "/Help/_About"
@@ -394,7 +369,7 @@ msgstr "Xem trang kế"
 
 #: src/yelp-window.c:649
 msgid "Home"
-msgstr "Nhà"
+msgstr "Home"
 
 #: src/yelp-window.c:650
 msgid "Go to home view"
@@ -408,171 +383,167 @@ msgstr "Đang nạp..."
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1303
 msgid "translator_credits"
-msgstr "Nguyễn Thái Ngọc Duy"
+msgstr "Nhóm Việt hoá GNOME (http://gnomevi.sourceforge.net)"
 
 #: src/yelp-window.c:1309
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Trình trợ giúp của GNOME 2.0"
+msgstr "Trình duyệt trợ giúp của GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Về bài viết này"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Về thư mục này"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Về cuốn sách này"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Về chương này"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Về mục này"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Về Từ điển Thuật ngữ này"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Về Mục lục này"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Về phần này"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Về Lời giới thiệu này"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Về tham khảo này"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Về phần này"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Về phần này"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Ứng dụng"
+msgstr ""
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Phụ lục"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Bài viết"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Độc giả"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Tác giả"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Tác giả"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Thư mục"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Sách"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Thận trọng"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Chương"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Người cộng tác"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Người cộng tác"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Lời kết"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Bản quyền"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Bản quyền"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Ngày"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Phần"
+msgstr "Đề tặng"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Sửa"
+msgstr "Chủ bút"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Ví dụ"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Hình"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Từ điển Thuật ngữ"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Quan trọng"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -584,7 +555,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Mức"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
@@ -600,47 +571,47 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Ghi chú"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Nguồn gốc"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Những người tham gia khác"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Những người tham gia khác"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Phần"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Mở đầu"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Nhà xuất bản"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Nhà xuất bản"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Tham khảo"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Mục nhập Tham khảo"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Phần tham khảo"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
@@ -652,37 +623,35 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Xem"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Xem thêm"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Mục lục"
+msgstr "Đặt Mục lục"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Bảng"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Nội dung trợ giúp"
+msgstr "Mục lục"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Mẹo"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Tựa đề"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Cảnh báo"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -692,79 +661,78 @@ msgstr "Trợ giúp với GNOME"
 msgid "Help"
 msgstr "Trợ giúp"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Tài liệu '%s' không tồn tại"
+msgid "The document '%s' does not exist"
+msgstr "Tài liệu '%s' không tồn tại"
 
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Tìm văn bản trong tài liệu:</b>"
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Tìm văn bản trong tài liệu:</b>"
 
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Tự động _cuộn"
+msgid "Automatically _wrap around"
+msgstr "Tự động _cuộn"
 
-#~ msgid "Find text..."
-#~ msgstr "Tìm chuỗi..."
+msgid "Find text..."
+msgstr "Tìm chuỗi..."
 
-#~ msgid "Match _entire word"
-#~ msgstr "Khớp toàn _bộ từ"
+msgid "Match _entire word"
+msgstr "Khớp toàn _bộ từ"
 
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_So khớp chữ hoa/thường"
+msgid "_Match upper/lower case"
+msgstr "_So khớp chữ hoa/thường"
 
-#~ msgid "_Search for:"
-#~ msgstr "_Tìm:"
+msgid "_Search for:"
+msgstr "_Tìm:"
 
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Desktop"
+msgid "GNOME - Desktop"
+msgstr "GNOME - Desktop"
 
-#~ msgid "Additional documents"
-#~ msgstr "Các tài liệu bổ sung"
+msgid "Additional documents"
+msgstr "Các tài liệu bổ sung"
 
-#~ msgid "Manual Pages"
-#~ msgstr "Trang Man"
+msgid "Manual Pages"
+msgstr "Trang Man"
 
-#~ msgid "Info Pages"
-#~ msgstr "Các trang Info"
+msgid "Info Pages"
+msgstr "Các trang Info"
 
-#~ msgid "Manual pages"
-#~ msgstr "Các trang Man"
+msgid "Manual pages"
+msgstr "Các trang Man"
 
-#~ msgid "GNOME is"
-#~ msgstr "GNOME là"
+msgid "GNOME is"
+msgstr "GNOME là"
 
-#~ msgid "Free Software"
-#~ msgstr "Phần mềm tự do"
+msgid "Free Software"
+msgstr "Phần mềm tự do"
 
-#~ msgid "(C)"
-#~ msgstr "(C)"
+msgid "(C)"
+msgstr "(C)"
 
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Đang nạp..."
+msgid "Loading..&nbsp;"
+msgstr "Đang nạp..&nbsp;"
 
-#~ msgid "Search in the index"
-#~ msgstr "Tìm trong mục lục"
+msgid "Search in the index"
+msgstr "Tìm trong mục lục"
 
-#~ msgid ""
-#~ "Error while parsing the stylesheet, make sure you have your docbook "
-#~ "environment setup correctly."
-#~ msgstr ""
-#~ "Lỗi phân tích stylesheet, hãy chắc rằng bạn đã cài đặt môi trường DocBook "
-#~ "đúng."
+msgid ""
+"Error while parsing the stylesheet, make sure you have your docbook "
+"environment setup correctly."
+msgstr ""
+"Lỗi phân tích stylesheet, hãy chắc rằng bạn đã cài đặt môi trường DocBook "
+"đúng."
 
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "Không thể phân tích tài liệu '%s'"
+msgid "Couldn't parse the document '%s'."
+msgstr "Không thể phân tích tài liệu '%s'"
 
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "Lỗi áp dụng stylesheet."
+msgid "Error while applying the stylesheet."
+msgstr "Lỗi áp dụng stylesheet."
 
-#~ msgid "info"
-#~ msgstr "thông tin"
+msgid "info"
+msgstr "thông tin"
 
-#~ msgid "man"
-#~ msgstr "man"
+msgid "man"
+msgstr "man"
 
-#~ msgid "Start page"
-#~ msgstr "Trang bắt đầu"
+msgid "Start page"
+msgstr "Trang bắt đầu"
 
-#~ msgid "Scrollkeeper docs for category"
-#~ msgstr "Tài liệu phân loại dựa trên Scrollkeeper"
+msgid "Scrollkeeper docs for category"
+msgstr "Tài liệu phân loại dựa trên Scrollkeeper"
